@@ -1,6 +1,7 @@
 Revision history for Whelk
 
 {{$NEXT}}
+	- Added documentation for Whelk::Schema::Definition
 
 0.05 - 2024-07-06
 	- Framework no longer assumes resource is a subclass of Kelp, allowing custom base controllers
